# cookiecutter-adafruit-circuitpython

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.rst  REUSE.toml  conf.py  cookiecutter.json  cookiecutter.json.license  pytest.ini  readthedocs.yml  requirements.txt  tests_requirements.txt
.github/workflows/: pre-commit.yml  test.yml
.reuse/: dep5
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_make_cookies.py  test_make_cookies.py.bak.20260318032113
{% if cookiecutter.library_prefix %}{{ cookiecutter.library_prefix | capitalize }}_CircuitPython{% else %}CircuitPython_Org{% endif %}_{{ cookiecutter.library_name|replace(" ", "_")}}/: README.rst
{% if cookiecutter.library_prefix %}{{ cookiecutter.library_prefix | capitalize }}_CircuitPython{% else %}CircuitPython_Org{% endif %}_{{ cookiecutter.library_name|replace(" ", "_")}}/docs/: index.rst
{% if cookiecutter.library_prefix %}{{ cookiecutter.library_prefix | capitalize }}_CircuitPython{% else %}CircuitPython_Org{% endif %}_{{ cookiecutter.library_name}}/: README.rst  README.rst.license
{% if cookiecutter.library_prefix %}{{ cookiecutter.library_prefix | capitalize }}_CircuitPython{% else %}CircuitPython_Org{% endif %}_{{ cookiecutter.library_name}}/docs/: conf.py  index.rst
{% if cookiecutter.library_prefix %}{{ cookiecutter.library_prefix | capitalize }}_{% endif %}CircuitPython_{{ cookiecutter.library_name}}/: .pre-commit-config.yaml  README.rst  requirements.txt  setup.py
{% if cookiecutter.library_prefix %}{{ cookiecutter.library_prefix | capitalize }}_{% endif %}CircuitPython_{{ cookiecutter.library_name}}/.github/PULL_REQUEST_TEMPLATE/: adafruit_circuitpython_pr.md
{% if cookiecutter.library_prefix %}{{ cookiecutter.library_prefix | capitalize }}_{% endif %}CircuitPython_{{ cookiecutter.library_name}}/docs/: api.rst  conf.py
{{ cookiecutter and 'tmp_repo' }}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  {% if cookiecutter.pypi_release in ['y', 'yes'] %}setup.py{% endif %}  {% if cookiecutter.sphinx_docs in ['y', 'yes'] %}.readthedocs.yaml{% endif %}
{{ cookiecutter and 'tmp_repo' }}/.github/workflows/: build.yml  release.yml
{{ cookiecutter and 'tmp_repo' }}/docs/: conf.py  index.rst
{{ cookiecutter.__dirname }}/: .gitattributes  .pre-commit-config.yaml  README.rst  pyproject.toml  {% if cookiecutter.pypi_release in ['n', 'no'] %}pyproject.toml.disabled{% endif %}  {% if cookiecutter.pypi_release in ['y', 'yes'] %}pyproject.toml{% endif %}  {% if cookiecutter.sphinx_docs in ['y', 'yes'] %}.readthedocs.yaml{% endif %}  {% if cookiecutter.target_bundle == 'Adafruit' %}CODE_OF_CONDUCT.md{% endif %}  {% if cookiecutter.target_bundle == 'Community' %}CODE_OF_CONDUCT.md{% endif %}  {{ cookiecutter.__libprefix }}{{ cookiecutter.__libname }}.py
{{ cookiecutter.__dirname }}/.github/workflows/: build.yml  release.yml  release_gh.yml  release_pypi.yml
{{ cookiecutter.__dirname }}/docs/: examples.rst.license  {% if cookiecutter.sphinx_docs in ['y', 'yes'] %}api.rst{% endif %}  {% if cookiecutter.sphinx_docs in ['y', 'yes'] %}conf.py{% endif %}  {% if cookiecutter.sphinx_docs in ['y', 'yes'] %}index.rst{% endif %}
{{ cookiecutter.library_name }}/: .pylintrc  .travis.yml  LICENSE  README.rst  adafruit_{{ cookiecutter.library_name }}.py  api.rst  conf.py  requirements.txt  setup.py  {% if cookiecutter.library_prefix %}{{ cookiecutter.library_prefix | lower }}_{% endif %}{{ cookiecutter.library_name | lower }}.py
{{ cookiecutter.library_name }}/docs/: api.rst  conf.py  examples.rst  index.rst
(+5 files in other folders)
